--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
 
 <body class="site-body">
 
-  <div class="container-sm d-flex flex-column align-items-center">
+  <div class="container d-flex flex-column align-items-center">
     <h2 class="text-center text-white fw-bold display-3 my-4">To-Do List</h2>
-    <form class="js-form-todo form p-5 rounded-3 shadow-sm w-75" id="formToDo" action="https://echo.htmlacademy.ru"
+    <form class="js-form-todo form p-5 rounded-top shadow-sm w-75" id="formToDo" action="https://echo.htmlacademy.ru"
       method="POST">
       <div class="row">
         <div class="col-md-6">
           <input class="form-control js-form-amount" type="text" placeholder="Todo:" id="inputAmountToDo" required>
         </div>
         <div class="col-md-4 mt-4 mt-md-0">
-          <input class="form-control js-form-amount-author" type="text" placeholder="Author:" id="inputAmountAuthor"
-            required>
+          <input class="form-control js-form-amount-author" type="text" placeholder="Author:" id="inputAmountAuthor" required>
         </div>
 
         <div class="col-md-2 mt-4 mt-md-0">
@@ -35,11 +34,36 @@
 
         <div class="col-12">
           <ul class="todo-list list-unstyled mt-4">
+           <!--  <li class="todo-item bg-info text-white p-2 rounded mt-2 d-flex align-items-center shadow-sm">
+              <div class="d-flex">
+                <input class="checkbox-btn form-check-input ms-1 me-3 order-first" type="checkbox">
+                <p class="mb-0">Yugurish</p>
+                <p class="mb-0 ms-3 fst-italic">Asror</p>
+              </div>
+              <button class="ms-auto delete-btn btn btn-danger" type="button">Delete</button>
+            </li> -->
           </ul>
-        </div>
 
+        </div>
       </div>
     </form>
+    <div class="button-wrapper p-3 rounded-bottom shadow-sm w-75">
+      <div class="row">
+        <div class="col-md-4 mt-3 mt-md-0">
+          <button class="btn-all btn btn-primary">All
+            <span class="all-result ms-1">0</span></button>
+        </div>
+        <div class="col-md-4 mt-3 mt-md-0">
+          <button class="btn-completed btn btn-success">Completed
+            <span class="completed-result ms-1">0</span></button>
+        </div>
+        <div class="col-md-4 mt-3 mt-md-0">
+          <button class="btn-uncompleted btn btn-danger text-white">Uncompleted
+            <span class="uncompleted-result ms-1">0</span></button>
+        </div>
+      </div>
+    </div>
+
   </div>
 
 
