--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS-11 | To-Do</title>
+  <title>To-Do | JS</title>
   <link rel="stylesheet" href="css/bootstrap5.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
 <body class="site-body">
 
   <div class="container d-flex flex-column align-items-center">
-    <h2 class="text-center text-white fw-bold display-3 my-4">To-Do List</h2>
+    <h2 class="text-center text-white fw-bold display-3 my-4">Sample To-Do</h2>
     <form class="js-form-todo form p-5 rounded-top shadow-sm w-75" id="formToDo" action="https://echo.htmlacademy.ru"
       method="POST">
       <div class="row">
